[package]
name = "synnq_zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
bulletproofs = { version = "4.0", features = ["yoloproofs"] }
merlin = "3.0"
curve25519-dalek-ng = "4.1.1"
rocksdb = "0.22.0"
hex = "0.4.3"
